@@ -253,6 +253,9 @@ Release 2.4.0 - UNRELEASED
     YARN-1824. Improved NodeManager and clients to be able to handle cross
     platform application submissions. (Jian He via vinodkv)
 
+    YARN-1512. Enhanced CapacityScheduler to be able to decouple scheduling from
+    node-heartbeats. (Arun C Murthy via vinodkv)
+
   OPTIMIZATIONS
 
   BUG FIXES
